--- a/AgendaDeTarefas/Views/Shared/_Layout.cshtml
+++ b/AgendaDeTarefas/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="TarefaCadastrada" asp-action="Index">Tarefas Cadastradas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="TarefaCadastrada" asp-action="TarefaDetalhada">Tarefas Detalhadas</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="TarefaCadastrada" asp-action="Index">Tarefas Detalhadas</a>
                         </li>
                     </ul>
                 </div>
@@ -37,7 +37,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - AgendaDeTarefas - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2022 - AgendaDeTarefas - <a asp-area="" asp-controller="TarefaCadastrada" asp-action="Index">Tarefas Cadastradas</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
